<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="handler"
            type="unicauca.movil.midestin.PagarActivity"
            />


    </data>

    <TableLayout
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*"
        tools:context="unicauca.movil.midestin.LoginActivity">

        <FrameLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/tarjetas"
                android:scaleType="centerCrop" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/mask"
                android:id="@+id/imageView" />

        </FrameLayout>


        <TextView
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="COMPRAR TIQUETE"
            android:layout_marginTop="@dimen/small"
            android:textSize="@dimen/medium"
            android:layout_marginLeft="70dp"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="0dp"
            android:padding="@dimen/small"
            android:layout_weight="1"
            android:gravity="center"
            >


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nombre">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/medium"
                    android:inputType="text"

                    android:hint="@string/nombre" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cedula">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/medium"
                    android:inputType="number"

                    android:hint="@string/cedula" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cuenta">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/medium"
                    android:inputType="number"
                    android:hint="@string/no_de_cuenta" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/login_pass" />


            </android.support.design.widget.TextInputLayout>
            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/pagar"
                android:paddingTop="@dimen/small"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:onClick="@{()-> handler.goToRegistrar()}"/>

        </LinearLayout>




    </TableLayout>
</layout>